[package]
name = "art-power-creater"
version = "0.1.0"
edition = "2024"

[dependencies]
"tracing" = "0.1"
"tracing-subscriber" = { version = "0.3", features = ["fmt"] }
"tracing-appender" = "0.2"
"serde" = { version = "1.0", features = ["derive"] }
"serde_json" = "1.0"

[package.metadata.rust-analyzer]
rustc-private = true